Add support for java modules
Introduces java 11 as the minimum required version