@@ -7,10 +7,10 @@
     <groupId>com.github.timo-reymann</groupId>
     <url>https://github.com/timo-reymann/csv-parser</url>
     <artifactId>csv-parser</artifactId>
-    <version>3.1.0</version>
+    <version>4.0.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-    <name>${artifactId}</name>
+    <name>${project.artifactId}</name>
     <description>Simple CSV-Parser</description>
 
     <licenses>
@@ -30,20 +30,20 @@
 
     <properties>
         <!-- General build settings -->
-        <java.version>8</java.version>
+        <java.version>11</java.version>
 
         <!-- Build Plugins -->
         <maven.compiler-plugin.version>3.8.1</maven.compiler-plugin.version>
         <maven-jar-plugin.version>3.1.2</maven-jar-plugin.version>
         <maven.javadoc-plugin.version>3.1.1</maven.javadoc-plugin.version>
         <maven.gpg-plugin.version>1.6</maven.gpg-plugin.version>
-        <maven.surefire-plugin.version>2.22.0</maven.surefire-plugin.version>
+        <maven.surefire-plugin.version>3.0.0-M4</maven.surefire-plugin.version>
         <maven.source-plugin.version>3.1.0</maven.source-plugin.version>
         <nexus.staging-plugin.version>1.6.8</nexus.staging-plugin.version>
 
         <!-- Dependency Versions -->
-        <lombok.version>1.18.10</lombok.version>
-        <junit.version>5.5.2</junit.version>
+        <lombok.version>1.18.12</lombok.version>
+        <junit.version>5.6.0</junit.version>
     </properties>
 
     <developers>
@@ -72,6 +72,12 @@
             <artifactId>lombok</artifactId>
             <scope>provided</scope>
             <version>${lombok.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.mapstruct</groupId>
+            <artifactId>mapstruct-processor</artifactId>
+            <version>1.3.0.Final</version>
+            <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
@@ -108,6 +114,13 @@
                 <configuration>
                     <source>${java.version}</source>
                     <target>${java.version}</target>
+                    <annotationProcessorPaths>
+                        <path>
+                            <groupId>org.projectlombok</groupId>
+                            <artifactId>lombok</artifactId>
+                            <version>${lombok.version}</version>
+                        </path>
+                    </annotationProcessorPaths>
                 </configuration>
             </plugin>
             <plugin>
@@ -168,6 +181,12 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>${maven.surefire-plugin.version}</version>
+                <configuration>
+                    <argLine>
+                        --illegal-access=permit --add-opens
+                        com.github.timo_reymann.csv_parser/com.github.timo_reymann.csv_parser.io=ALL-UNNAMED
+                    </argLine>
+                </configuration>
             </plugin>
         </plugins>
     </build>
